arreglar despliegue